Fix file open and updated version

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name=Python_WebDAV_Library
 description=This library provides a WebDAV client.
 longDescription=This library provides a WebDAV client including ACP and searching support.
-version=0.4.2
+version=0.4.2awingu1
 author=Deutsches Zentrum fuer Luft- und Raumfahrt e.V. (DLR)
 authorEmail=Tobias.Schlauch@dlr.de
 maintainer=Deutsches Zentrum fuer Luft- und Raumfahrt e.V. (DLR)
