Change version to 0.4.3 in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name=python3-webdav-library
 description=This library provides a WebDAV client.
 longDescription=This library provides a WebDAV client including ACP and searching support.
-version=0.4.2awingu1
+version=0.4.3
 author=Deutsches Zentrum fuer Luft- und Raumfahrt e.V. (DLR)
 authorEmail=Tobias.Schlauch@dlr.de
 maintainer=Deutsches Zentrum fuer Luft- und Raumfahrt e.V. (DLR)
